# mongo-c-driver

./: .gitignore  BUILD.bazel  MODULE.bazel
src/libmongoc/: CMakeLists.txt
src/libmongoc/examples/: kmip-prototype.c  kms-prototype.c
src/libmongoc/src/mongoc/: mongoc-client-pool.c  mongoc-client.c  mongoc-cluster-private.h  mongoc-cluster.c  mongoc-connection-pool-private.h  mongoc-connection-pool.c  mongoc-server-stream-private.h  mongoc-server-stream.c  mongoc-topology-background-monitoring.c  mongoc-topology-private.h  mongoc-topology.c  mongoc-uri.c  mongoc-uri.h
src/libmongoc/tests/: test-mongoc-client-pool.c
